# banao-macropad

./: .gitignore  README.md  meson.build  org.dietro.banao.json
data/: meson.build  org.dietro.banao.desktop.in  org.dietro.banao.gschema.xml  org.dietro.banao.metainfo.xml.in  org.dietro.banao.service.in
data/icons/: meson.build
firmware/: banao01_firmware.ino
firmware/banao01_firmware/: banao01_firmware.ino
po/: POTFILES.in  meson.build
src/: banao.gresource.xml  banao.in  input_injector.py  main.py  meson.build  platform_base.py  platform_factory.py  window.ui
src/adapters/: base.py  factory.py  linux.py  windows.py
src/core/: __init__.py  engine.py  profile_engine.py  serial_reader.py
src/platform/: __init__.py  linux.py
src/ui/: __init__.py  tray_helper.py  window.py  window.ui
